--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "c:\\Program Files\\Java\\algs4.jar"
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
