--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,27 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "type": "java",
+            "name": "Solution",
+            "request": "launch",
+            "mainClass": "week7.FindTheMedium.Solution",
+            "projectName": "DSA_INT_2210_c18d638b"
+        },
+        {
+            "type": "java",
+            "name": "FindTheRunningMedian",
+            "request": "launch",
+            "mainClass": "week12.FindTheRunningMedian",
+            "projectName": "DSA_INT_2210_c18d638b"
+        },
+        {
+            "type": "java",
+            "name": "tempCodeRunnerFile",
+            "request": "launch",
+            "mainClass": "week12.tempCodeRunnerFile",
+            "projectName": "DSA_INT_2210_c18d638b"
+        },
         {
             "type": "java",
             "name": "Current File",
